[package]
name = "alice-codec"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto <ext-sakamoro@github.com>"]
description = "Hyper-Fast 3D Wavelet Video Codec"
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-Codec"
keywords = ["codec", "video", "wavelet", "compression", "rans"]
categories = ["compression", "multimedia::video"]
publish = false

[lib]
name = "alice_codec"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "alice-codec"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["std"]
std = []
cli = ["clap"]
simd = []
python = ["pyo3", "numpy"]
ml = ["dep:alice-ml"]  # ALICE-ML ternary inference for motion estimation
db = ["dep:alice-db", "std"]  # ALICE-DB metrics storage for monitoring
crypto = ["dep:alice-crypto", "std"]  # ALICE-Crypto AEAD encryption for bitstreams
cache = ["dep:alice-cache", "std"]  # ALICE-Cache decoded frame caching

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }
alice-ml = { path = "../ALICE-ML", optional = true, default-features = false, features = ["std"] }
alice-db = { path = "../ALICE-DB", optional = true, default-features = false }
alice-crypto = { path = "../ALICE-Crypto", optional = true, default-features = false, features = ["std"] }
alice-cache = { path = "../ALICE-Cache", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "wavelet"
harness = false

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
